src/language/snapshots/java_analyzer__language__java__tests__agent_error_ast.snap
---
source: src/language/java.rs
expression: ast
---
program [0-278] "class Agent {\n    static Object inst;\n  "
  ERROR [0-277] "class Agent {\n    static Object inst;\n  "
    class [0-5] "class"
    identifier [6-11] "Agent"
    { [12-13] "{"
    field_declaration [18-37] "static Object inst;"
      modifiers [18-24] "static"
        static [18-24] "static"
      type_identifier [25-31] "Object"
      variable_declarator [32-36] "inst"
        identifier [32-36] "inst"
      ; [36-37] ";"
    method_declaration [42-87] "private static Object test() { return nu"
      modifiers [42-56] "private static"
        private [42-49] "private"
        static [50-56] "static"
      type_identifier [57-63] "Object"
      identifier [64-68] "test"
      formal_parameters [68-70] "()"
        ( [68-69] "("
        ) [69-70] ")"
      block [71-87] "{ return null; }"
        { [71-72] "{"
        return_statement [73-85] "return null;"
          return [73-79] "return"
          null_literal [80-84] "null"
          ; [84-85] ";"
        } [86-87] "}"
    modifiers [92-105] "public static"
      public [92-98] "public"
      static [99-105] "static"
    void_type [106-110] "void"
    identifier [111-120] "agentmain"
    formal_parameters [120-146] "(String args, Object inst)"
      ( [120-121] "("
      formal_parameter [121-132] "String args"
        type_identifier [121-127] "String"
        identifier [128-132] "args"
      , [132-133] ","
      formal_parameter [134-145] "Object inst"
        type_identifier [134-140] "Object"
        identifier [141-145] "inst"
      ) [145-146] ")"
    throws [147-163] "throws Exception"
      throws [147-153] "throws"
      type_identifier [154-163] "Exception"
    { [164-165] "{"
    expression_statement [174-192] "Agent.inst = inst;"
      assignment_expression [174-191] "Agent.inst = inst"
        field_access [174-184] "Agent.inst"
          identifier [174-179] "Agent"
          . [179-180] "."
          identifier [180-184] "inst"
        = [185-186] "="
        identifier [187-191] "inst"
      ; [191-192] ";"
    local_variable_declaration [201-226] "var proxy = new Object();"
      type_identifier [201-204] "var"
      variable_declarator [205-225] "proxy = new Object()"
        identifier [205-210] "proxy"
        = [211-212] "="
        object_creation_expression [213-225] "new Object()"
          new [213-216] "new"
          type_identifier [217-223] "Object"
          argument_list [223-225] "()"
            ( [223-224] "("
            ) [224-225] ")"
      ; [225-226] ";"
    expression_statement [235-247] "proxy.run();"
      method_invocation [235-246] "proxy.run()"
        identifier [235-240] "proxy"
        . [240-241] "."
        identifier [241-244] "run"
        argument_list [244-246] "()"
          ( [244-245] "("
          ) [245-246] ")"
      ; [246-247] ";"
    field_access [256-266] "Agent.inst"
      identifier [256-261] "Agent"
      . [261-262] "."
      identifier [262-266] "inst"
    = [267-268] "="
    } [274-275] "}"
    } [276-277] "}"
