src/language/snapshots/java_analyzer__language__java__tests__agent_error_location.snap
---
source: src/language/java.rs
expression: "format!(\"{:?}\", ctx.location)"
---
Expression { prefix: "" }
