src/language/snapshots/java_analyzer__language__java__tests__agent_error_members.snap
---
source: src/language/java.rs
expression: "members.join(\"\\n\")"
---
agentmain static=true private=false method=true
inst static=true private=false method=false
test static=true private=true method=true
