src/language/snapshots/java_analyzer__language__java__tests__injected_v2_ast.snap
---
source: src/language/java.rs
expression: ast
---
program [0-63] "class A {\n    void f() {\n        java.ut"
  class_declaration [0-61] "class A {\n    void f() {\n        java.ut"
    class [0-5] "class"
    identifier [6-7] "A"
    class_body [8-61] "{\n    void f() {\n        java.util.A__KI"
      { [8-9] "{"
      method_declaration [14-59] "void f() {\n        java.util.A__KIRO__;\n"
        void_type [14-18] "void"
        identifier [19-20] "f"
        formal_parameters [20-22] "()"
          ( [20-21] "("
          ) [21-22] ")"
        block [23-59] "{\n        java.util.A__KIRO__;\n    }"
          { [23-24] "{"
          expression_statement [33-53] "java.util.A__KIRO__;"
            field_access [33-52] "java.util.A__KIRO__"
              field_access [33-42] "java.util"
                identifier [33-37] "java"
                . [37-38] "."
                identifier [38-42] "util"
              . [42-43] "."
              identifier [43-52] "A__KIRO__"
            ; [52-53] ";"
          } [58-59] "}"
      } [60-61] "}"
  ; [62-63] ";"
