src/language/snapshots/java_analyzer__language__java__tests__inner_class_box_visibility_pipeline_provenance.snap
---
source: src/language/java.rs
expression: out
---
parsed_classes:
name=Box internal=org/cubewhy/ClassWithGenerics$Box inner_of=Some("ClassWithGenerics")
name=ClassWithGenerics internal=org/cubewhy/ClassWithGenerics inner_of=None

index_lookup_box:
name=Box internal=org/cubewhy/ClassWithGenerics$Box inner_of=Some("ClassWithGenerics")

type_location=TypeAnnotation { prefix: "Bo" }
type_annotation_list_bo_candidates_contains_box=true
first_20=["Box"]

ctor_location=ConstructorCall { class_prefix: "Bo", expected_type: None, qualifier_expr: None, qualifier_owner_internal: None }
constructor_new_bo_candidates_contains_box=true
first_20=["Box"]

decl_location=TypeAnnotation { prefix: "Bo" }
declaration_box_string_candidates_contains_box=true
first_20=["Box"]
