src/language/snapshots/java_analyzer__language__java__tests__partial_methods.snap
---
source: src/language/java.rs
expression: "result.join(\"\\n\")"
---
agentmain static=true private=false
