src/language/snapshots/java_analyzer__language__java__tests__real_agent_enclosing.snap
---
source: src/language/java.rs
expression: "format!(\"{:?}\", ctx.enclosing_class)"
---
Some("Agent")
