src/language/snapshots/java_analyzer__language__java__tests__real_agent_root.snap
---
source: src/language/java.rs
expression: top
---
package_declaration [0-25]
  package [0-7]
  scoped_identifier [8-24]
  ; [24-25]
ERROR [26-455]
  modifiers [26-32]
  class [33-38]
  identifier [39-44]
  { [45-46]
  field_declaration [51-78]
  method_declaration [83-215]
  method_declaration [220-265]
  modifiers [270-283]
  void_type [284-288]
  identifier [289-298]
  formal_parameters [298-324]
  throws [325-341]
  { [342-343]
  expression_statement [352-370]
  local_variable_declaration [379-404]
  expression_statement [413-425]
  field_access [434-444]
  = [445-446]
  } [452-453]
  } [454-455]
